# sumurai

./: .dockerignore  .env.example  .gitignore  .releaserc.json  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql-analysis.yml  publish-images.yml  release.yml  semantic-pr.yml
.husky/: pre-commit
.husky/_/: husky.sh
backend/: Cargo.toml  Dockerfile
backend/migrations/: 023_user_categories.sql  024_category_rules.sql  025_manual_investment_accounts.sql  026_manual_account_balance_history.sql
backend/src/: auth_middleware.rs  config.rs  main.rs
backend/src/handlers/: mod.rs  otel_browser.rs
backend/src/middleware/: auth_ip_ban.rs  mod.rs  resource_authorization.rs  telemetry_middleware.rs
backend/src/models/: account.rs  analytics.rs  app_state.rs  auth.rs  category.rs  ip_ban.rs  mod.rs  plaid.rs  rate_limit.rs  transaction.rs
backend/src/openapi/: mod.rs
backend/src/providers/: teller_provider.rs
backend/src/services/: analytics_service.rs  authorization_service.rs  cache_service.rs  connection_service.rs  mod.rs  otel_traces_relay.rs  rate_limit_service.rs  repository_service.rs
backend/src/tests/: analytics_service_tests.rs  auth_cookie_tests.rs  auth_handlers_integration_tests.rs  auth_middleware_tests.rs  auth_rate_limit_tests.rs  auth_redaction_tests.rs  auth_service_tests.rs  authorization_service_tests.rs  balances_overview_api_tests.rs  balances_overview_helpers_tests.rs  budget_api_integration_tests.rs  cache_service_tests.rs  config_tests.rs  connection_service_tests.rs  integration_tests.rs  mod.rs  models_tests.rs  openapi_tests.rs  otel_traces_relay_tests.rs  repository_service_tests.rs  security_resilience_edge_cases_tests.rs  teller_model_tests.rs  test_fixtures.rs
backend/src/utils/: account_validation.rs  auth_cookie.rs  encryption_key.rs  glob.rs  mod.rs
docs/: ARCHITECTURE.md  OPENAPI.json  PRODUCTION_TLS.md  STYLING_GUIDE.md  sumurai-threat-model.md  sumurai-ui-guidelines.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.ci.json
frontend/src/: App.tsx  Auth.tsx  SessionManager.tsx
frontend/src/components/: AccountRow.tsx  AuthenticatedApp.tsx  BalancesOverview.tsx  BankCard.tsx  DisconnectModal.tsx  Footer.tsx  HeaderAccountFilter.tsx
frontend/src/context/: AccountFilterContext.tsx  ThemeContext.tsx
frontend/src/domain/: AccountNormalizer.ts  BudgetCalculator.ts  TransactionFilter.ts  TransactionTransformer.ts
frontend/src/hooks/: useAccountFilter.tsx  usePlaidConnections.tsx  useTellerConnect.ts  useTellerLinkFlow.ts
frontend/src/observability/: sanitization.ts  telemetry.ts
frontend/src/services/: AnalyticsService.ts  ApiClient.ts  CategoryService.ts  ManualAssetService.ts  ManualInvestmentService.ts  authService.ts
frontend/src/types/: analytics.ts  api.ts
frontend/src/utils/: categories.ts  dateOnly.ts  transactionAmounts.ts
frontend/src/views/: AccountsPage.tsx  DashboardPage.tsx  TransactionsPage.tsx
frontend/tests/components/: HeaderAccountFilter.test.tsx
nginx/: Dockerfile  entrypoint.sh  healthcheck.sh  nginx.conf.template
nginx/tests/: entrypoint_certificate_helpers_test.sh  entrypoint_runtime_detection_test.sh  entrypoint_startup_validation_test.sh  healthcheck_test.sh
scripts/: build-backend.sh  sync-release-version.mjs
squid/: squid.conf
tools/: sync-release-version.mjs
(+48 files in other folders)
